# AdderNet

./: .gitignore  CHANGELOG.md  CLAUDE.md  KAGGLE_SETUP.md  MANIFEST.in  Makefile  QWEN.md  README.md  README_DEV.md  REPORT.md  SHA256SUMS.txt  VALIDATION_REPORT.md  kaggle_setup.py  pyproject.toml  pytest.ini  setup.py  test_validation.py
addernet/: __init__.py  addernet.py  addernet_hdc.py  boost.py  build_ext.py  build_ext_2026.py  cluster.py  cuda_detector.py  reference.py  selftest.py  vector.py
addernet/src/: addernet.c  addernet.h  addernet_hdc.c  hdc_core.c  hdc_cuda_batch.c  hdc_lsh.h
benchmarks/: benchmark_core.py  enhanced_1.6.0.json  full_benchmark.json  original_1.5.0.json  validation_suite.py
docs/: ARCHITECTURE.md
examples/: from_scratch_reference.py  multivariate_regression.py  physics_3d_learned.py  two_input.py
examples/basic/: addition.py  benchmark.py  celsius_fahrenheit.py
examples/creativity/: comparacao_mlp.py  fashion_criatividade.py  flor_inventada.py  mnist_blocos.py  mnist_hdc.py
examples/hdc/: benchmark_cuda.py  benchmark_cuda_batch.py  benchmark_hdc.py  benchmark_lsh.py  benchmark_lsh_tuning.py  benchmark_otimizado.py  code_completion_eval.py  code_intent_classification.py  code_intent_w2v.py  iris_hdc.py  sweep_D.py
python/: __init__.py  addernet.py  addernet_hdc.py
src/: addernet.c  addernet.h  addernet_cuda.cu  addernet_hdc.c  addernet_hdc.h  hdc_core.h  hdc_core_cuda.c  hdc_lsh.c
src/addernet/: __init__.py  addernet.py  addernet_hdc.py  attention.py  boost.py  build_ext.py  build_ext_2026.py  cluster.py  cuda_detector.py  reference.py  vector.py
src/addernet/models/: __init__.py  classification.py  multi_input.py
src/addernet/preprocessing/: __init__.py  quantization.py
src/addernet/src/: addernet.c  addernet.h  addernet_hdc.c  hdc_core.c
src/cuda_train/: addernet_hdc_train_cuda_2026.cu
tests/: test_attention.py  test_cuda_2026.py  test_hdc_main.c  test_high_level.py  test_main.c  test_multi_input.py  test_quantizer.py  test_reference_and_vector.py  test_regressions.py  test_scalar_layer.py
