[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addernet"
version = "1.5.0"
description = "Neural networks with zero multiplications at inference. AdderNet + HDC for embedded systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = ["numpy", "scikit-learn", "scipy"]
authors = [
    { name = "AdderNet Team" }
]
keywords = ["machine-learning", "neural-network", "addernet", "hyperdimensional-computing", "embedded", "no-fpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/PedroHenriqueBatistaSilva/AdderNet"
Repository = "https://github.com/PedroHenriqueBatistaSilva/AdderNet"

[project.scripts]
addernet-build = "addernet.build_ext:build"
addernet-selftest = "addernet.selftest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["addernet*"]
exclude = ["addernet.egg-info*", "build*", "dist*", "cache*", "colab*", "examples*"]

[tool.setuptools.package-data]
addernet = ["src/*.c", "src/*.h", "src/*.cu"]
