[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addernet"
version = "1.6.0"
description = "Multiplication-free lookup neural models with scalar, multi-input, HDC, and additive APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "AdderNet Team"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1", "ruff>=0.6"]

[project.scripts]
addernet-build = "addernet.build_ext:build"
addernet-selftest = "addernet.selftest:main"

[project.urls]
Homepage = "https://github.com/PedroHenriqueBatistaSilva/AdderNet"
Repository = "https://github.com/PedroHenriqueBatistaSilva/AdderNet"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
addernet = [
  "*.so", "*.dylib", "*.dll",
  "src/*.c", "src/*.h", "src/*.cu",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
